partially fixed spacing in selections

--- a/selections.css
+++ b/selections.css
@@ -12,16 +12,21 @@ body {font-family: Verdana, sans-serif;}
   border: 2px solid black;
 }
 
+#item-input {
+  margin-left: 50px;
+
+}
+
+
+
 #selection-form {
   width: 40%;
   margin-left: 40px;
 }
 
-#selection-form div {
-  margin: 10px 10px 10px;
-}
 
 #product {
+  margin: 10px 10px 10px;
   border: 1px solid red;
 }
 
@@ -29,6 +34,11 @@ input {
   width: 30px;
 }
 
+#product-container {
+  height: 40px;
+  width: 70%;
+  display: inline-block;
+}
 
 
 
